<resources>
    <string name="app_name">Agendify</string>
    <string name="open">Abrir menú</string>
    <string name="close">Cerrar menú</string>
    <string name="nombre_negocio">Nombre del negocio <font color='#FF0000'>*</font></string>
    <string name="direccion_negocio">Dirección del negocio <font color='#FF0000'>*</font></string>
    <string name="numero_telefono">Número de teléfono <font color='#FF0000'>*</font></string>
    <string name="correo_electronico">Correo electrónico <font color='#FF0000'>*</font></string>
    <string name="contraseña_obligatoria">Contraseña <font color='#FF0000'>*</font></string>
    <string name="nombre_completo_usuario">Nombre completo del usuario <font color='#FF0000'>*</font></string>
    <string name="numero_telefono_obligatorio">Número de teléfono <font color='#FF0000'>*</font></string>


</resources>