<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_Usuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REGISTRO DE USUARIOS"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="30sp"/>

        <ImageView
            android:layout_width="180sp"
            android:layout_height="180sp"
            android:src="@drawable/logo_agendify"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:id="@+id/txt10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="12sp"
            android:text="@string/nombre_completo_usuario" />


        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre completo"
            android:inputType="textPersonName"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:id="@+id/txt11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="12sp"
            android:text="@string/numero_telefono_obligatorio" />

        <EditText
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Numero de telefono"
            android:inputType="number"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:id="@+id/txt12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="12sp"
            android:text="@string/correo_electronico" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:id="@+id/txt13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="12sp"
            android:text="@string/contraseña_obligatoria" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:layout_marginBottom="30sp"/>

        <Button
            android:id="@+id/registerUserButton"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="Registrar Usuario"
            android:textColor="#FFFFFF"
            android:background="@drawable/boton_personalizado"/>
    </LinearLayout>
    </ScrollView>
    <!-- ImageButton para desplegar el menú -->
    <ImageButton
        android:id="@+id/menuButton3"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:background="#00FFFFFF"
        android:contentDescription="Menú desplegable"
        android:src="@drawable/ic_menu"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>