<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

    <TextView
        android:id="@+id/tituloRegistroNegocio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTRO DEL NEGOCIO"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloRegistroNegocio"
            android:text="@string/nombre_negocio"/>

        <EditText
        android:id="@+id/businessName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nombre del Negocio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <!-- Categoría del Negocio -->
        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Categoría del Negocio"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessName" />
        <Spinner
            android:id="@+id/businessCategory"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt2"/>

    <!-- Dirección -->

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessCategory"
            android:text="@string/direccion_negocio" />

        <EditText
        android:id="@+id/businessAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Dirección"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt3" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Enlace de google maps con la ubicacion"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessAddress" />
    <EditText
        android:id="@+id/businessMapsLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enlace de Google Maps"
        app:layout_constraintTop_toBottomOf="@id/txt4"
        android:inputType="textUri" />

    <!-- Número de Teléfono -->

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessMapsLink"
            android:text="@string/numero_telefono" />

        <EditText
        android:id="@+id/businessPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Número de Teléfono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt5"/>

    <!-- Correo Electrónico -->
        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessPhone"
            android:text="@string/correo_electronico" />

        <EditText
        android:id="@+id/businessEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Correo Electrónico"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt6"/>

        <!-- citas simultaneas -->
        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Ingresa aqui el número de citas simultaneas en la misma hora"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/businessEmail" />

        <EditText
            android:id="@+id/businessTrabajadores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Citas simultaneas. Ejemplo: 2"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt8"/>

    <!-- Sección para seleccionar los días de trabajo -->
    <LinearLayout
        android:id="@+id/horariolayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/businessTrabajadores">

        <TextView
            android:id="@+id/txtHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="El horario del negocio es el siguiente:"
            android:textColor="#000000"
            android:textSize="15sp"></TextView>
    </LinearLayout>

    <!-- Subir logo del negocio -->
    <Button
        android:id="@+id/uploadLogoButton"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:text="Subir Logo del Negocio"
        android:textColor="#FFFFFF"
        android:background="@drawable/boton_personalizado2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horariolayout"
        android:layout_marginTop="20dp"
        tools:ignore="NotSibling" />

        <!-- Contraseña -->

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadLogoButton"
            android:text="@string/contraseña_obligatoria" />



        <EditText
        android:id="@+id/businessPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt7" />

    <!-- Botón de Registro -->
    <Button
        android:id="@+id/registerBusinessButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Registrar Negocio"
        android:textColor="#FFFFFF"
        android:background="@drawable/boton_personalizado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/businessPassword"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/editHorarioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editar"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_personalizado2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessTrabajadores" />

        <!-- ImageButton para desplegar el menú -->
        <ImageButton
            android:id="@+id/menuButton4"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:background="#00FFFFFF"
            android:contentDescription="Menú desplegable"
            android:src="@drawable/ic_menu"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
